# speed_tracker

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
app/: STTools.py  speedTracker.py
lib/: Dashboard.py  speed_tracker.py
lib/utils/: createDashboardSettings.py  emailChecker.py  emailManager.py  emailServers.py  encryptionManager.py  readDashboardSettings.py  updateDashboardSettings.py
res/: list_of_servers.txt
res/config/: dashboard.ini
res/design/: Dashboard.ui
res/ui/: Dashboard.ui  dashboardapp.py
setting/: speedTracker.ini
test/: _Dashboard.py
tools/: checkEnviron.py  checkSettings.py  convertBytes.py  emailManager.py
